--- a/app/views/transaction_list.html
+++ b/app/views/transaction_list.html
@@ -2,7 +2,7 @@
     <head>
         <title> Token Holder </title>
         <link rel="stylesheet" type="text/css" href="../css/demo.css">
-        
+        <link rel="stylesheet" type="text/css" href="../css/transaction_editor.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     </head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -26,7 +26,7 @@
                 <div class="col-12 p-0">
                     <div class="d-flex justify-content-between align-items-center mt-6 mb-5">
                         <h3 class="mb-0">Actions</h3>
-                        <button id="create_transaction_btn" class="btn btn-primary float-right">ADD Action</button>
+                        <button id="create_transaction_btn" class="btn btn-gold float-right">ADD Action</button>
                     </div>
                 </div>
             </div>
