--- a/app/views/token-holder.html
+++ b/app/views/token-holder.html
@@ -4,6 +4,17 @@
     <title> Token Holder </title>
     <link rel="stylesheet" type="text/css" href="../css/demo.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../plugins/codemirror/codemirror.css">
+    <script src="../plugins/codemirror/codemirror.js"></script>
+    <style type="text/css">
+      .CodeMirror{
+        width: 100%;
+        padding: 10px;
+        color: #ffffff;
+        border: 1px solid black;
+        background-color: #000000;
+      }
+    </style>
   </head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -15,10 +26,6 @@
 
   <script type="text/javascript" src="../javascript/demo.js"></script>
   <script type="text/javascript" src="../javascript/Cookies.js"></script>
-  <script type="text/javascript">
-    
-
-  </script>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -47,24 +54,25 @@
 <div class="container">
    <div class="row mt-5">
     <div class="col-12">
-            <button id="executeCodeBtn" class="btn-secondary float-right mb-2 py-2 px-3" > execute </button>
+            <button id="executeCodeBtn" class="btn-secondary float-right mb-2 py-2 px-3" > Execute </button>
     </div>
   </div>
   <div class="row ">
-    <div class="col-12">
+    <div class="col-12 ">
+      <textarea class="code-snippet">alert("It Works!!")</textarea>
 <!--       <p class="code-snippet float-right pr-2 pt-2">JAVASCRIPT</p>
- -->      <pre class="code-snippet" >
-        
-            function test(fruit) {
-              // extract conditions to array
-              const redFruits = ['apple', 'strawberry', 'cherry', 'cranberries'];
+ <!--&ndash;&gt;      <pre class="code-snippet" >-->
+        <!---->
+            <!--function test(fruit) {-->
+              <!--// extract conditions to array-->
+              <!--const redFruits = ['apple', 'strawberry', 'cherry', 'cranberries'];-->
 
-              if (redFruits.includes(fruit)) {
-                console.log('red');
-              }
-            }
+              <!--if (redFruits.includes(fruit)) {-->
+                <!--console.log('red');-->
+              <!--}-->
+            <!--}-->
 
-      </pre>
+      <!--</pre>-->
     </div>
   </div>
 </div>
@@ -77,6 +85,17 @@
 </div>
 
 
+    <script type="text/javascript">
+      $(document).ready(function(){
+        var myCodeMirror = CodeMirror.fromTextArea($('.code-snippet')[0],{
+          mode:"javascript",
+        });
+        //alert("rfreshed")
+        $('#executeCodeBtn').on('click', function() {
+          eval($('.CodeMirror-code').text());
+        });
+      });
+    </script>
 
 
 </body>
