--- a/app/views/transaction_list.html
+++ b/app/views/transaction_list.html
@@ -1,9 +1,11 @@
 <html>
     <head>
-        <title> Token Holder </title>
+        <title> Transaction List </title>
         <link rel="stylesheet" type="text/css" href="../css/demo.css">
-        <link rel="stylesheet" type="text/css" href="../css/transaction_editor.css">
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../css/transaction_editor.css">
+        <link rel="stylesheet" type="text/css" href="../css/transaction_list.css">
     </head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -15,13 +17,11 @@
 
     <script type="text/javascript" src="../javascript/demo.js"></script>
     <script type="text/javascript" src="../javascript/Cookies.js"></script>
-    <script type="text/javascript">
-        
+    <script type="text/javascript" src="../javascript/transaction_list.js"></script>
 
-  </script>
 
     <body>
-        <div class="container">
+        <div class="container mt-5">
             <div class="row">
                 <div class="col-12 p-0">
                     <div class="d-flex justify-content-between align-items-center mt-6 mb-5">
@@ -33,78 +33,23 @@
                   
             <div class="transactions mb-1">
                 <div class="row header">
-                    <div class="col-2">NAME</div>
-                    <div class="col-2">VALUE (USD)</div>
-                    <div class="col-2">VALUE (BT SYMBOL)</div>
-                    <div class="col-2">PRICE ORACLE</div>
+                    <div class="col-3">NAME</div>
+                    <div class="col-3">VALUE (BT SYMBOL)</div>
                     <div class="col-3 p-0">COMMISSION</div>
                 </div>
             </div>
                   
-            <div class="row">
-                <div class="col-12 slider-parent-container" data-slider-content-wrapper=".ost-table-row">
-                    <div id="transaction_list" class="transactions" data-simple-table data-url="/api/economy/action/list">
-                        <script type="text/x-handlebars-template" data-row-template>
-                            <div class="row align-items-center mt-1 mb-3 rounded ost-table-row cell">
-                                <div class="col-2">{{name}}<br/><small class="font-weight-light">{{kind_display_text}}</small></div>
-                                    {{#IfIsAmountSet amount}}
-                                        <div class="col-2"><%= fiat_symbol %>{{value_in_fiat}}</div>
-                                        <div class="col-2">{{value_in_bt}}</div>
-                                    {{else}}
-                                        <div class="col-2">NA</div>
-                                        <div class="col-2">NA</div>
-                                    {{/IfIsAmountSet}}
-                                    <div class="col-2">{{price_oracle_text}}</div>
-                                    {{#IfIsarbitraryCommission arbitrary_commission}}
-                                    <div class="col-1 px-0">NA</div>
-                                    {{else}}
-                                    <div class="col-1 px-0">{{commission_percent}}&#37;</div>
-                                    {{/IfIsarbitraryCommission}}
-                                    <div class="col-3">
-                                        <% if should_show_api_call_button %>
-                                        <button class="showApiCallBtn btn btn-info slider-btn">
-                                            <svg class="icon-api-transactions align-middle">
-                                            <switch>
-                                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-api-transactions"></use>
-                                            </switch>
-                                            </svg>
-                                            <span class="align-middle">API Call</span>
-                                        </button>
-                                        <% end %>
-                                        <a href="javascript:void(0)" class="editRow rounded-circle edit-btn btn-info" data-result-id="{{id}}" title="Edit">
-                                        <svg class="icon-edit-transactions align-middle">
-                                            <switch>
-                                            <use class="icon-edit" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-edit-transactions"></use>
-                                            </switch>
-                                        </svg>
-                                        </a>
-                                        <input type="hidden" name="id" value={{id}}/>
-                                        <input type="hidden" name="uts" value={{uts}}/>
-                                    </div>
-                                <% if should_show_api_call_button %>
-                                    <div class="code-session col-12">
-                                        <comment class="w-100 code-comment">
-                                            // Below is as an example the API call that was requested to create this action type. <br />
-                                            // Note that the signature and the request_timestamp will have expired and need to be recalculated for each request. <br />
-                                            // Please access the API and SDK documentation from the Developers section for more details. <br />
-                                            // action_id: {{id}} <br />
-                                        </comment>
-                                        <code class="w-100 code-line">
-                                            <span class="curl-param-header">curl -i </span> <span class="curl-escape-character">\</span>
-                                            <br /><span class="curl-param-header"> -H</span> "Content-Type: application/x-www-form-urlencoded" <span class="curl-escape-character">\</span>
-                                            <% request_params.each do |request_param| %>
-                                            {{#IfShowRequesetParam '<%= request_param %>'}}
-                                            <br /><span class="curl-param-header"> -d</span> ' <%= request_param %> ' <span class="curl-escape-character">\</span>
-                                            {{/IfShowRequesetParam}}
-                                            <% end %>
-                                            <br /><span class="curl-param-header"> -X</span> <%= api_console_data['request_type'] %> <%= api_console_data['request_uri'] %>
-                                        </code>
-                                    </div>
-                                <% end %>
-                            </div>
-                        </script>
-                    </div>
-                </div>
+            <div class="row" id="listid" >
+
+                <!--<div class="transaction-list col-12" style="border: 1px solid black">-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-4 name-field">23</div>-->
+                        <!--<div class="col-4 value-bt-field">23</div>-->
+                        <!--<div class="col-4 p-0 commission-field">23</div>-->
+                    <!--</div>-->
+
+                <!--</div>-->
+            </div>
             </div>
     </body>
 </html>
