ost demo changes

--- a/app/views/token-holder.html
+++ b/app/views/token-holder.html
@@ -43,6 +43,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item clearHome" href="../index.html">Home</a>
           <a class="dropdown-item" href="./economy.html">Economy</a>
+          <a class="dropdown-item" href="./google_drive_integration.html">Google Drive</a>
           <a class="dropdown-item" href="./reserve.html">Reserve</a>
           <a class="dropdown-item" href="javascript:void(0)">Token Holder</a>
         </div>
