--- a/app/css/demo.css
+++ b/app/css/demo.css
@@ -21,3 +21,27 @@ svg{
 	background: black;
 	color: #ffffff;
 }
+
+
+/* sidebar*/
+
+#sidebar{
+	width: 250px;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+	color: #fff;
+	background-color: #438bad;
+}
+
+.nav-pills .nav-link {
+    border-radius: 0rem;
+}
+
+.nav-link.disabled{
+	color: #9bafb5;
+	background-color: #ffffff;
+
+}
+.content{
+	width: calc(100% - 250px);
+}
