--- a/app/css/transaction_list.css
+++ b/app/css/transaction_list.css
@@ -40,9 +40,17 @@
 }
 .rounded-circle{
     margin-left: 10px;
+
     border: 1px solid #69a2bd;
+    background: #fff;
+    color: #69a2bd;
     border-radius: 50%;
     width: 50px;
     height: 50px;
+    cursor: pointer;
+
+}
+.modal-dialog{
+    max-width: 800px;
 }
 
